# goodreads-explorer

./: .env.example  .gitignore  CLAUDE.md  DASHBOARD.md  PARSER_TS_MIGRATION_COMPLETE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.specify/memory/: constitution.md
api/: README.md
dashboard/: .env.example  README.md  docker-compose.yml
dashboard-backend/: .dockerignore  .sequelizerc  Dockerfile  MIGRATIONS.md  PARSER_MIGRATION.md  data-source.ts  package.json  pnpm-lock.yaml  tsconfig.json
dashboard-backend/src/: app.module.ts  main.ts
dashboard-backend/src/cli/: clear-database.ts  reload-library.ts  scrape-library.ts  sync-database.ts
dashboard-ui/: .dockerignore  Dockerfile  index.html  nginx.conf  pnpm-lock.yaml  vite.config.ts
dashboard-ui/src/: index.css
dashboard/backend/: .env.example  package.json
dashboard/frontend/: package.json
database/: init.sql
database/migrations/: add-original-json-column.sql
parse/: README.md  pyproject.toml  tim-brown_library.json
parse/src/: logging_config.py
parse/tests/: __init__.py
parser/: .gitignore  CHANGELOG.md  README.md  check-all-shelves.ts  compare-all-shelf.ts  get-all-book-ids.ts  get-all-shelf-ids.ts  inspect-shelf-total.ts  inspect-shelf-total2.ts  investigate-missing.ts  package.json  pnpm-lock.yaml  pyproject.toml
parser-ts/: .npmignore  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  package.json  tsconfig.json
parser-ts/examples/: basic-usage.ts
parser-ts/src/: api.ts  index.ts
parser/examples/: error-handling.ts
parser/src/: README.md  __init__.py  api.ts  exceptions.py
parser/src/__tests__/: data-validator.spec.ts  models.spec.ts  url-validator.spec.ts
parser/src/cli/: __init__.py  commands.py  scrape-library.ts
parser/src/exporters/: __init__.py  json-exporter.ts
parser/src/models/: book.model.ts  library.model.ts  shelf.model.ts  user-book.model.ts
parser/src/parsers/: book-parser.ts  book_parser.py  library-parser.ts
parser/src/scrapers/: goodreads-scraper.ts  pagination.py  pagination.ts
parser/src/validators/: __init__.py  data-validator.ts  data_validator.py  url-validator.ts
parser/tests/contract/: test_csv_contract.py  test_json_contract.py
parser/tests/unit/: test_parsers.py  test_validators.py
specs/001-scrape-goodreads-library/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-analytics-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
ui/: README.md
(+103 files in other folders)
